--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,16 @@ a {
 * {
   box-sizing: border-box;
 }
+
+h4 {
+  font-weight: 200;
+  font-style: italic;
+}
+
+h5 {
+  margin: 1em 0
+}
+
+h6 {
+  margin: .5em 0
+}
