updage nextjs, small graphical improvements

--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -1,4 +1,6 @@
-$shadow: rgba(170, 170, 170, 0.5);
+$SHADOW: rgba(170, 170, 170, 0.5);
+$PRIMARY_COLOR: rgb(240, 201, 184);//rgb(116, 115, 51);
+$SECONDARY_COLOR: rgba(187, 175, 187);//rgb(49, 51, 35);
 
 .main {
   display: flex;
@@ -6,7 +8,7 @@ $shadow: rgba(170, 170, 170, 0.5);
   justify-content: center;
   margin: auto;
   max-width: 794px;
-  box-shadow: 10px 10px 10px $shadow, -5px -5px 5px $shadow;
+  box-shadow: 10px 10px 10px $SHADOW, -5px -5px 5px $SHADOW;
 
   >header {
     display: flex;
@@ -14,8 +16,8 @@ $shadow: rgba(170, 170, 170, 0.5);
     gap: 1em;
     position: sticky;
     top: 0;
-    background-color: rgb(115, 171, 214);
-    border-bottom: solid 1em rgb(95, 152, 196);
+    background-color: $PRIMARY_COLOR;
+    border-bottom: solid 1em $SECONDARY_COLOR;
     padding: 1rem;
     z-index: 1;
 
@@ -37,8 +39,8 @@ $shadow: rgba(170, 170, 170, 0.5);
 
     img {
       height: 10em;
-      border: solid 1px rgb(115, 171, 214);
-      border-radius: 100%;
+      border: solid 5px $PRIMARY_COLOR;
+      border-radius: 5px;
     }
   }
 }
